--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,8 @@
+body{
+    background-color: var(--celesteChiaro);
+}
+
+
 :root{
     --celesteScuro:rgb(137, 176, 174);
     --celesteChiaro:rgb(190, 227, 219);
@@ -24,9 +29,6 @@
 }
 .montsterrant{
     font-family: 'Montserrat Alternates', sans-serif;
-}
-body{
-    background-color: lightsalmon;
 }
 
 .cover{
