modified ui to homepage

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@
     --celesteChiaro: rgb(190, 227, 219);
     --obsidianGray: rgb(85, 91, 110);
     --panna: rgb(250, 249, 249);
-    --orange: rgb(255, 214, 186);
+    --orange: rgb(255, 130, 81);
 }
 
 * {
@@ -49,6 +49,14 @@ a:hover {
     background-color: var(--celesteChiaro);
 }
 
+.orange{
+    color: var(--orange);
+}
+
+.orangeBg{
+    background-color: var(--orange);
+}
+
 .paytone {
     font-family: 'Paytone One', sans-serif;
 }
@@ -57,8 +65,20 @@ a:hover {
     font-family: 'Montserrat Alternates', sans-serif;
 }
 
+.lato{
+    font-family: 'Lato', sans-serif;
+}
+
+.obsidiangray{
+    color: var(--obsidianGray);
+}
+
+.obsidiangrayBg{
+    background-color: var(--obsidianGray);
+}
+
 body {
-    background-color: lightsalmon;
+    background-color: var(--panna);
 }
 
 .cover {
@@ -66,7 +86,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 80vh;
+    height: 95vh;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -75,7 +95,14 @@ body {
 .title {
     color: var(--panna);
     font-family: 'Paytone One', sans-serif;
-    font-size: 80px;
+    font-size: 40px;
+}
+
+.ultimiAnnunci{
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+   font-family: 'Lato', sans-serif;
+   font-weight: 900;
 }
 
 .boxTitle {
@@ -127,8 +154,9 @@ body {
 
 .customBtnSell {
 
-    background-image: linear-gradient(to right, #FFD6BA 55%, #FAF9F9);
-    color: rgb(23, 23, 23);
+    background-color: #ff8251;
+    /* background-image: linear-gradient(to right, var(--orange), #FAF9F9); */
+    color: var(--panna);
     font-size: 20px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: bolder;
@@ -152,7 +180,6 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: linear-gradient(to left, #FFD6BA 55%, #FAF9F9);
     z-index: -1;
     transition: opacity 0.8s;
     opacity: 0;
@@ -166,32 +193,7 @@ body {
     opacity: 1;
 }
 
-.test {
-    -ms-overflow-style: none;
-    /* Internet Explorer 10+ */
-    scrollbar-width: none;
-    /* Firefox */
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-}
 
-.test2 {
-    display: inline;
-}
-
-.test::-webkit-scrollbar {
-    display: none;
-    /* Safari and Chrome */
-}
-
-.test3 {
-    cursor: pointer;
-}
-
-.test3:active {
-    background-color: yellow;
-}
 
 .btnPers {
     border: none;
@@ -208,17 +210,16 @@ body {
 /* CARDS */
 
 .skill-card {
-
     padding: 20px;
     width: 22em;
-    background-color: #FFF;
+    background-color: #FAF9F9;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: pointer;
 }
 
 .skill-card .skill-card__header {
     position: relative;
-    background-color: #fff;
+    background-color: #FAF9F9;
     height: 250px;
     margin: -20px -20px 20px -20px;
     transition: height .5s;
@@ -227,9 +228,6 @@ body {
 
 .skill-card .skill-card__header .skill-card__icon {
     position: absolute;
-    /* top: 50%;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%); */
     display: block;
     width: 100%;
     height: 300px;
@@ -243,8 +241,9 @@ body {
 }
 
 .skill-card .skill-card__body .skill-card__title {
-    font-size: 1.4em;
-    font-weight: 600;
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
     text-transform: uppercase;
 }
 
@@ -255,9 +254,15 @@ body {
 }
 
 .skill-card .skill-card__body .skill-card__duration__category {
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+    font-style: italic;
     color: var(--celesteScuro);
-    font-weight: bolder;
     transition: all 0.5s;
+}
+.description{
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
 }
 
 .skill-card .skill-card__body .skill-card__knowledge {
@@ -286,7 +291,59 @@ body {
 
 /*  ^^ CARDS ^^ */
 
+.cardCategory{
+    height: 150px;
+    width: 220px;
+    /* background-image: linear-gradient(to left bottom, #555b6e, #5e7082, #688593, #769ba2, #89b0ae); */
+    background-color: #ff8251;
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25), 0 6px 6px rgba(0, 0, 0, 0.22);
+    transition: 0.5s;
+    border-radius: 10px;
+
+  }
+
+.cardCategory:hover{
+    transform: scale(1.1);
+}
+  
+
+  .nostreCategorie{
+    color: var(--obsidianGray);
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+   font-family: 'Lato', sans-serif;
+   font-weight: 900;
+}
+
+.uppercase{
+    color: var(--panna);
+    font-family: 'Lato', sans-serif;
+   font-weight: 900;
+    text-transform: uppercase;
+}
+
+.counterAnnunci{
+    font-size: 13px;
+    color: var(--panna);
+}
+
+.customBg{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1142%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 130%2c 81%2c 1)'%3e%3c/rect%3e%3cpath d='M423.79097252001884 490.7044106832567L496.8135113658022 527.9112526118788 516.1125048358438 399.7740233788927z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M384.44301273796657 399.23080518391015L295.27001573937264 296.6490066595138 281.8612142135702 488.4038021825041z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M85.74758571905241 122.24715760965353L-53.58651402214352 62.94656373641208-39.74985001628259 194.59362791879636z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M418.5421452811898 133.8088844338673L508.15039516281786 277.5166357665812 579.9235707597666 148.0343994422039z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M548.6370701592339 459.94376910698475L691.1088528442145 367.614432878429 560.0719994919773 297.94090205580244z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1315.947093742356 363.4543079971899L1216.722340462447 409.7235703301518 1335.7386106018441 535.4260690835343z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M835.2588958296955 349.6876340938893L952.4155258099222 295.1924708495701 861.0366902259594 228.80186063821154z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M189.14975101014335 255.5617872412487L94.83483658198274 321.60180128945046 255.1897650583451 349.87670166940933z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M1278.7307976985182 84.8189247961997L1337.3772394747073 178.8721875533047 1384.3510546010941 94.12918181801177z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1350.9737028229363 293.1144334909319L1446.9870095615543 298.14627767872435 1406.528122473934 151.61039547690095z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M118.50590643834457 174.71364165986768L245.52764247335782 107.17498658403642 50.96725136251331 47.69190562485443z' fill='rgba(255%2c 255%2c 255%2c 0.29)' class='triangle-float1'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1142'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cstyle%3e %40keyframes float1 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-10px%2c 0)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float1 %7b animation: float1 5s infinite%3b %7d %40keyframes float2 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-5px%2c -5px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float2 %7b animation: float2 4s infinite%3b %7d %40keyframes float3 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(0%2c -10px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float3 %7b animation: float3 6s infinite%3b %7d %3c/style%3e%3c/defs%3e%3c/svg%3e");
+}
+
+
+
+
+
+
+
+
 @media screen and (min-width:768px) {
+
+
+    .title {
+        font-size: 80px;
+    }
 
     .skill-card:hover {
         box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
