--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11360,6 +11360,10 @@ a:hover {
     background-color: var(--obsidianGray);
 }
 
+.orangeBg{
+    background-color: var(--orange);
+}
+
 body {
     background-color: var(--panna);
 }
@@ -11369,7 +11373,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 95vh;
+    height: 100vh;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -11677,14 +11681,6 @@ body {
         font-weight: bolder;
     }
 }
-:root{
-    --celesteScuro:rgb(137, 176, 174);
-    --celesteChiaro:rgb(190, 227, 219);
-    --obsidianGray:rgb(85, 91, 110);
-    --panna:rgb(250, 249, 249);
-    --orange:rgb(255, 214, 186);
-}
-
 .presto-nav{
     background-color:transparent;
    
@@ -11718,8 +11714,40 @@ body {
 }
 
 .nav-item {
-    font-family:'Montserrat Alternates', sans-serif; 
-    /* modifica font per nicolo */
+    font-family: 'Lato', sans-serif;
+}
+
+  
+
+.presto-nav-general .nav-link, .presto-nav .nav-link.active{
+    color: var(--panna) !important;
+    transform: scale(1.1);
+}    
+
+.presto-nav-general .nav-link:hover, .presto-nav .nav-link.active:hover{
+    color: var(--panna) !important;
+   
+}    
+
+.presto-nav-general{
+    text-align:center;
+}   
+
+.presto-nav-general ul .dropdown-menu{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.badge-class{
+    right: 2px;
+}
+
+.title-nav{
+    font-size: 50px;
+    font-family:'Montserrat Alternates', sans-serif;
+}
+
+.nav-item {
+    font-family: 'Lato', sans-serif;
 }
 .allCards{
     border-radius: 20px;
