--- a/resources/css/style-nav.css
+++ b/resources/css/style-nav.css
@@ -1,11 +1,3 @@
-:root{
-    --celesteScuro:rgb(137, 176, 174);
-    --celesteChiaro:rgb(190, 227, 219);
-    --obsidianGray:rgb(85, 91, 110);
-    --panna:rgb(250, 249, 249);
-    --orange:rgb(255, 214, 186);
-}
-
 .presto-nav{
     background-color:transparent;
    
@@ -39,6 +31,38 @@
 }
 
 .nav-item {
-    font-family:'Montserrat Alternates', sans-serif; 
-    /* modifica font per nicolo */
+    font-family: 'Lato', sans-serif;
+}
+
+  
+
+.presto-nav-general .nav-link, .presto-nav .nav-link.active{
+    color: var(--panna) !important;
+    transform: scale(1.1);
+}    
+
+.presto-nav-general .nav-link:hover, .presto-nav .nav-link.active:hover{
+    color: var(--panna) !important;
+   
+}    
+
+.presto-nav-general{
+    text-align:center;
+}   
+
+.presto-nav-general ul .dropdown-menu{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.badge-class{
+    right: 2px;
+}
+
+.title-nav{
+    font-size: 50px;
+    font-family:'Montserrat Alternates', sans-serif;
+}
+
+.nav-item {
+    font-family: 'Lato', sans-serif;
 }
