--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,6 +77,10 @@ a:hover {
     background-color: var(--obsidianGray);
 }
 
+.orangeBg{
+    background-color: var(--orange);
+}
+
 body {
     background-color: var(--panna);
 }
@@ -86,7 +90,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 95vh;
+    height: 100vh;
     width: 100%;
     margin: 0px;
     padding: 0px;
