--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11713,11 +11713,15 @@ body {
     font-family:'Montserrat Alternates', sans-serif;
 }
 
+.title-nav:hover{
+    color: var(--panna);
+}
+
 .nav-item {
     font-family: 'Lato', sans-serif;
 }
 
-  
+  /*NAVGENERAL */
 
 .presto-nav-general .nav-link, .presto-nav .nav-link.active{
     color: var(--panna) !important;
@@ -11748,6 +11752,17 @@ body {
 
 .nav-item {
     font-family: 'Lato', sans-serif;
+}
+
+header.presto-nav {
+    width: 100%;
+    position: fixed;
+    transition: 0.3s ease-in-out;
+}
+
+.nav-active {
+    background-color:var(--orange);
+    box-shadow: 5px -1px 12px -5px grey;
 }
 .allCards{
     border-radius: 20px;
