--- a/resources/css/style-nav.css
+++ b/resources/css/style-nav.css
@@ -30,11 +30,15 @@
     font-family:'Montserrat Alternates', sans-serif;
 }
 
+.title-nav:hover{
+    color: var(--panna);
+}
+
 .nav-item {
     font-family: 'Lato', sans-serif;
 }
 
-  
+  /*NAVGENERAL */
 
 .presto-nav-general .nav-link, .presto-nav .nav-link.active{
     color: var(--panna) !important;
@@ -65,4 +69,15 @@
 
 .nav-item {
     font-family: 'Lato', sans-serif;
+}
+
+header.presto-nav {
+    width: 100%;
+    position: fixed;
+    transition: 0.3s ease-in-out;
+}
+
+.nav-active {
+    background-color:var(--orange);
+    box-shadow: 5px -1px 12px -5px grey;
 }
